--- a/page.css
+++ b/page.css
@@ -61,6 +61,8 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    left: 70px;
+    left: 60px;
     top: 70px;
+    border: none;
+    overflow-x:hidden;
 }
